--- a/styles/main.css
+++ b/styles/main.css
@@ -1,129 +1,118 @@
-/* 1 .625 .39 .244  */
-:root {
-  /* white */
-  --white: rgba(255, 255, 255, 1);
-  --white-light: rgba(255, 255, 255, .625);
-  --white-dark: rgba(255, 255, 255, .39);
-
-  /* gray */
-  --gray-light: rgba(159, 159, 159, .09);
-  --gray-dark: rgba(159, 159, 159, .16);
-
-  /* black */
-  --black-light:rgba(0, 0, 0, .39);
-  --black-dark:  rgba(0, 0, 0, .625);
-
-  /* green */
-  --green-light: rgba(0, 159, 0, .625);
-
-}
+/* white */
+/* gray */
+/* black */
+/* green */
 body {
-  background-color: var(--gray-light);
-  margin: 0;
-  padding: 0;
-}
-#app {
-  /* background-color: gray; */
   font-family: 'Philosopher', sans-serif;
   font-size: 1rem;
   line-height: 1.6rem;
+  background-color: rgba(159, 159, 159, 0.09);
+  margin: 0;
+  padding: 0;
+}
+
+body * {
+  font-family: inherit;
+}
+
+#app {
   display: grid;
-  /* place-items: center; */
-  /* place-content: center; */
   width: 16.77em;
   grid-gap: .625em;
-  padding: 1.6rem 0 1.6rem 0;
+  padding: .62rem 0 .62rem 0;
   text-align: center;
 }
-#app * {
-  border-radius: .48em;
+
+#app *:link, #app *:visited {
+  text-decoration: none;
+  color: inherit;
 }
-#app *:disabled {
+
+/* #app *:disabled {
   background-color: red;;
-}
-#app ul, ol {
+} */
+#app ul, ol, li {
   list-style: none;
   padding: 0;
 }
 
+.btn, .board {
+  border-radius: .48em;
+}
 
 .btn {
-  color: var(--black-dark);
-  /* border-radius: .625em; */
-  background-color: var(--white-light);
-  box-shadow: 0 0 .625em .1em var(--gray-dark);
+  color: rgba(0, 0, 0, 0.625);
+  background-color: rgba(255, 255, 255, 0.39);
+  box-shadow: 0 0 0.625em 0.1em rgba(159, 159, 159, 0.16);
   padding: .24em .15em .24em .15em;
   border-style: none;
   margin: .39em;
-
   height: 2.56em;
   width: 6.55em;
-
   cursor: pointer;
-  font-weight: bold;
-}
-.btn:active {
-  transform: scale(.9);
-  background-color: var(--green-light);
-  color: var(--white);
 }
 
+.btn:active {
+  transform: scale(0.9);
+  background-color: rgba(0, 159, 0, 0.625);
+  color: white;
+}
 
 .board {
-  background-color: var(--white);
+  background-color: white;
   padding: .48em;
-  border-top: .16em solid var(--gray-light);
-  border-bottom: .16em solid var(--gray-light);
-  /* border-radius: .48em; */
+  border-top: 0.16em solid rgba(159, 159, 159, 0.09);
+  border-bottom: 0.16em solid rgba(159, 159, 159, 0.09);
 }
-
 
 p, h4 {
-  margin: .4rem 0 .4rem 0;
+  margin: 0.4rem 0 rgba(0, 0, 0, 0.39) 0;
 }
+
 h4 {
-  color: var(--black-dark);
+  color: rgba(0, 0, 0, 0.625);
   font-weight: 400;
 }
+
 #elapsedTime {
   font-size: 1.6em;
 }
-.hidden-data {
-  display: none;
-  visibility: hidden;
-}
+
 .two-col {
   display: grid;
   grid-template-columns: 1fr 2fr;
   align-items: center;
-  border-bottom: .1em solid var(--gray-light);
-}
-#info address{
-  background-color: var(--gray-light);
-  color: rgba(0, 0, 0, .8);
-  font-size: .8em;
-  display: grid;
 }
 
- /* Toggle */
+#info address {
+  background-color: rgba(159, 159, 159, 0.09);
+  color: rgba(0, 0, 0, 0.8);
+  font-size: .8em;
+  display: grid;
+  width: auto;
+}
+
+/* Toggle */
 #recordHead {
   cursor: pointer;
-};
-#recordContent{
+}
+
+#recordContent {
   /* visibility: hidden;
   display: none; */
 }
+
 #record-container {
   display: grid;
   grid-gap: .39em;
 }
+
 .record-item {
-  
+  display: grid;
 }
 
 .record-item-time {
-  text-align: right;
+  margin-left: 1.6em;
   float: left;
-  /* background-color: red; */
-  color: var(--black-dark);
+  color: rgba(0, 0, 0, 0.625);
 }
