--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,134 +1,137 @@
-// Color valiables 
-  /* white */
-  $white: rgba(255, 255, 255, 1);
-  $white-light: rgba(255, 255, 255, .625);
-  $white-dark: rgba(255, 255, 255, .39);
+@import '__variables_color.scss';
+@import '__variables_size.scss';
 
-  /* gray */
-  $gray-light: rgba(159, 159, 159, .09);
-  $gray-dark: rgba(159, 159, 159, .16);
-
-  /* black */
-  $black-light:rgba(0, 0, 0, .39);
-  $black-dark:  rgba(0, 0, 0, .625);
-
-  /* green */
-  $green-light: rgba(0, 159, 0, .625);
-
+// Font setting
+body {
+  font-family: 'Kalam', cursive;
+  // font-family: 'Quintessential', cursive;
+  // font-family: 'Philosopher', sans-serif;
+}
+// Monospace for time format 
+.time, .record-item {
+  // font-family: 'Cousine', monospace;
+  // font-family: 'B612 Mono', monospace;
+  font-family: 'Courier Prime', monospace;
+  // font-family: 'Cutive Mono', monospace;
+}
 
 body {
-  font-family: 'Philosopher', sans-serif;
+  margin: 0;
+  padding: 0;
+
+  
   font-size: 1rem;
   line-height: 1.6rem;
 
-  background-color: $gray-light;
-  margin: 0;
-  padding: 0;
   & * {
     font-family: inherit;
   }
 }
+
+
+
 #app {
   display: grid;
-  width: 16.77em;
-  grid-gap: .625em;
-  padding: .62rem 0 .62rem 0;
+  grid-gap: .8rem;
+  width: 20em;
+  background-color: $c-bg;
   text-align: center;
-  
-  & *:link, *:visited {
+
+  p {
+    margin: $co-H 0;
+  }
+
+  h4 {
+    color: $c-font-sub;
+    font-weight: unset;
+    margin: $co-H 0;
+  }
+
+  address {
+    border-radius: .5rem;
+    background-color: $c-bg;
+    color: $c-font-extra;
+
+    & * {
+      display: block;
+    }
+  }
+
+  a {
     text-decoration: none;
+  }
+
+  :link {
+    color: inherit;
+  }
+
+  :visited {
     color: inherit;
   }
 }
 
-/* #app *:disabled {
-  background-color: red;;
-} */
-#app ul, ol, li {
-  list-style: none;
-  padding: 0;
-  // $black-light
-}
+#record {
+  display: flex;
+  flex-direction: column;
+  ;
+  ol { 
+    padding: 0;
+  }
+  p {
+    margin: $co-H/2 0;
+  }
 
-// Component alsss common property 
-.btn, .board {
-  border-radius: .48em;
-}
+  .record-item {
+    
+    // background-color: red;
 
-.btn {
-  color: $black-dark;
-  background-color: $white-dark;
-  box-shadow: 0 0 .625em .1em $gray-dark;
-  padding: .24em .15em .24em .15em;
-  border-style: none;
-  margin: .39em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
-  height: 2.56em;
-  width: 6.55em;
+    &-date {
+      color: rgba(0, 0, 0, .5);
+    }
 
-  cursor: pointer;
-  // font-weight: bold;
-
-  &:active {
-    transform: scale(.9);
-  background-color: $green-light;
-  color: $white;
+  }
+  .record-total {
+    font-size: 1.6rem;
+    // margin: 1.6em 0;
   }
 }
 
-.board {
-  background-color: $white;
-  padding: .48em;
-  border-top: .16em solid $gray-light;
-  border-bottom: .16em solid $gray-light;
-  // width: 100%;
+// Start and Stop time display 
+.time-cont {
+  display: flex;
+  justify-content: space-between;;
 }
 
-p, h4 {
-  margin: .4rem 0 $black-light 0;
-}
-h4 {
-  color: $black-dark;
-  font-weight: 400;
-}
-#elapsedTime {
-  font-size: 1.6em;
+
+
+
+
+
+
+// Theme try
+
+#app {
+  #app[theme=default] {
+    // background-color: red;
+
+
+    // background-color: rgba($gray-light, .05);
+  }
+
+  #app[theme=dark] {
+    $c-bg: $black-dark;
+
+
+    // background-color: $black-dark;
+    color: $white-light;
+
+    .board {
+      // background-color: rgba($black-dark, .85);
+    }
+  }
+
 }
 
-.two-col {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  align-items: center;
-  // border-bottom: .1em solid $gray-light;
-}
-
-#info address{
-  background-color: $gray-light;
-  color: rgba(0, 0, 0, .8);
-  font-size: .8em;
-  display: grid;
-  width: auto;
-}
-
- /* Toggle */
-#recordHead {
-  cursor: pointer;
-};
-#recordContent{
-  /* visibility: hidden;
-  display: none; */
-}
-#record-container {
-  display: grid;
-  grid-gap: .39em;
-}
-.record-item {
-  display:grid;
-  
-}
-
-.record-item-time {
-  margin-left: 1.6em;
-  float: left;
-  color: $black-dark;
-}
